<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/kari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dip"
        android:layout_weight="1"
        android:backgroundTint="#FF8b0000"
        android:textColor="#FFffffff"
        android:onClick="onKariButtonClick"
        android:text="仮"/>

    <Button
        android:id="@+id/current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dip"
        android:layout_weight="1"
        android:backgroundTint="#FF8b0000"
        android:textColor="#FFffffff"
        android:onClick="onCurrentButtonClick"
        android:text="@string/bt_current"/>
    <Button
        android:id="@+id/favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dip"
        android:layout_weight="1"
        android:backgroundTint="#FF8b0000"
        android:textColor="#FFffffff"
        android:onClick="onFavoriteButtonClick"
        android:text="@string/bt_favorite"/>
    <Button
        android:id="@+id/station"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dip"
        android:layout_weight="1"
        android:backgroundTint="#FF8b0000"
        android:textColor="#FFffffff"
        android:onClick="onStationButtonClick"
        android:text="@string/bt_station"/>

</LinearLayout>
