<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/search_station_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/bottom_bar"
        android:backgroundTint="#FF8b0000"
        android:orientation="horizontal">

        <include
            android:id="@+id/bottom"
            layout="@layout/activity_header" />

        <TextView
            android:id="@+id/btMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="4dip"
            android:text="@string/lb_station_top"
            android:textColor="#FFffffff"
            android:textSize="20dp" />
    </LinearLayout>

        <TextView
            android:id="@+id/lb_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dip"
            android:textSize="20dp"
            android:textColor="#FF000000"
            android:text="@string/lb_input_text" />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner1"
        android:spinnerMode="dialog" />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:spinnerMode="dialog" />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner3"
        android:spinnerMode="dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical" >
        <Button
            android:id="@+id/bt_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFffffff"
            android:backgroundTint="#FF8b0000"
            android:text="@string/bt_search"
            android:onClick="onClick"
            android:textColor="#FFffffff" />
    </LinearLayout>

</LinearLayout>
